2008-12-03  Vadim Kurland  <vadim@vk.crocodile.org>

	* iosacl.g (certificate): fixed bug #2334007: "Problem parsing
	Cisco config". Parser now recognizes IOS configuration lines
	"certificate", "ip community-list", "controller
	... description". These lines are recognized and ignored, they
	should not stop parser from processing the rest of the
	configuration.

	* ipt.cpp (main): fixed bug #2378672: "fwb 3.0.2 build 676
	iptables script is not executable". Generated .fw file should have
	executable permissions.

2008-12-02  Vadim Kurland  <vadim@vk.crocodile.org>

	* FWObjectDatabase_tree_ops.cpp (recursivelyCopySubtree): (change
	in libfwbuilder) fixed bug #2375327: "Crash copying multiple
	groups between different data files". Using better algorithm to
	copy objects between different data files.

	* ObjectManipulator.cpp (ObjectManipulator::duplicateWithDependencies): 
	using FWObjectDatabase::recusrivelyCopySubtree() to copy objects if
	they are located in different data files.

	* FWObjectDatabase_tree_ops.cpp (_recursivelyCopySubtree): (change
	in libfwbuilder) Implemented additional check for object
	duplicates while copying objects. The problem happened when
	several object were copied in a batch operation (e.g. when user
	selected several objects in the GUI and then used copy/paste to
	copy them all). If some of these objects were groups that referred
	to other objects from the same batch, the program would copy the
	object and then create another copy of it when it copied the group
	using it. To avoid such multiplication it now creates special
	hidden attribute in the object when it makes a copy to keep track
	of the original object. When the same original object needs to be
	copied again, the program can find its copy in the target data
	tree using this attribute. This creates another problem because
	the attribute used to track original object is persistent for the
	duration of the program run. The scenario that leads to this is as